Reworked navigation menus

--- a/TnTComponents/Archive/Grid/TnTDataGridRow.razor
+++ b/TnTComponents/Archive/Grid/TnTDataGridRow.razor
@@ -1,4 +1,5 @@
-﻿@inherits TnTComponentBase
+﻿@using TnTComponents.Common
+@inherits TnTComponentBase
 @typeparam TGridItem
 
 <tr aria-rowindex="@RowIndex"
