--- a/TnTComponents/Buttons/TnTButton.razor
+++ b/TnTComponents/Buttons/TnTButton.razor
@@ -1,5 +1,6 @@
 ﻿@namespace TnTComponents
-@inherits TnTComponents.Core.TnTComponentBase
+@using TnTComponents.Core
+@inherits TnTComponentBase
 
 <tnt-button @attributes="AdditionalAttributes"
         class="@Class"
