--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -1,10 +1,12 @@
 ﻿@import 'TnTComponents/_colors.scss';
+@import 'TnTComponents/_measurements.scss';
 
 @import 'TnTComponents/_typeography.scss';
 @import 'TnTComponents/_elevation.scss';
 @import 'TnTComponents/_border-radius.scss';
 @import 'TnTComponents/_ripple.scss';
 @import 'TnTComponents/_flex.scss';
+@import 'TnTComponents/_layout.scss';
 
 @import 'TnTComponents/_buttons.scss';
 @import 'TnTComponents/_div.scss';
@@ -12,4 +14,8 @@
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
+}
+
+body {
+    margin: 0;
 }
