--- a/TnTComponents/TnTColumn.razor
+++ b/TnTComponents/TnTColumn.razor
@@ -1,4 +1,5 @@
-﻿@implements ITnTComponentBase
+﻿@using TnTComponents.Core
+@implements ITnTComponentBase
 
 <div @attributes="AdditionalAttributes" class="@GetClass()" style="@GetStyle()" @ref="@Element">
     @ChildContent
