--- a/TnTComponents/TnTContainer.razor
+++ b/TnTComponents/TnTContainer.razor
@@ -1,4 +1,5 @@
-﻿@inherits TnTComponentBase
+﻿@using TnTComponents.Common
+@inherits TnTComponentBase
 
 <div @attributes="AdditionalAttributes" class="@GetClass()" style="@Style" theme="@Theme">
     @ChildContent
