--- a/TnTComponents/TnTSegmentedButton.razor
+++ b/TnTComponents/TnTSegmentedButton.razor
@@ -1,4 +1,5 @@
-﻿@inherits TnTComponentBase
+﻿@using TnTComponents.Common
+@inherits TnTComponentBase
 
 <CascadingValue IsFixed="true" Value="this">
     <div @attributes="AdditionalAttributes" class="@GetClass()" theme="@Theme" style="@Style">
