--- a/TnTComponents/Archive/Grid/TnTDataGrid.razor
+++ b/TnTComponents/Archive/Grid/TnTDataGrid.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Rendering
 @using TnTComponents.Archive.Grid.Infrastructure
+@using TnTComponents.Common
 @inherits TnTComponentBase
 @typeparam TGridItem
 @implements ITnTDataGridSettings<TGridItem>
