--- a/TnTComponents/Common/TnTIconComponent.razor
+++ b/TnTComponents/Common/TnTIconComponent.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@using TnTComponents.Enum
+
 @code {
 
     public static RenderFragment RenderIcon(IconType iconType, string? icon, string? @class = null) {
