--- a/TnTComponents/Layout/TnTSideNavHeadline.razor
+++ b/TnTComponents/Layout/TnTSideNavHeadline.razor
@@ -1,7 +1,9 @@
-﻿@inherits TnTComponentBase
+﻿@using TnTComponents.Core
+@inherits TnTComponentBase
+@namespace TnTComponents
 
 
-<h3 @attributes="AdditionalAttributes" class="@GetClass()" style="@Style" theme="@Theme">
+<h3 @attributes="AdditionalAttributes" style="@Style">
     @ChildContent
 </h3>
 
