--- a/TnTComponents/TnTDialog.razor
+++ b/TnTComponents/TnTDialog.razor
@@ -1,4 +1,5 @@
-﻿@using global::TnTComponents.Dialogs
+﻿@using TnTComponents.Services
+@using global::TnTComponents.Dialogs
 @implements IDisposable
 @inject TnTDialogService DialogService
 
