Added side nav links

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -9,56 +9,56 @@
     </TnTHeader>
 
     <TnTSideNav Title="My Title">
-        <TnTSideNavHeadline>
+        <h3>
             My First Headline
-        </TnTSideNavHeadline>
-        <TnTSideNavMenuLink Icon="home" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
+        </h3>
+        <TnTSideNavMenuLink Icon="MaterialIcon.Home" Href="/" Match="NavLinkMatch.All" Status="100" Disabled="true">
             Home
         </TnTSideNavMenuLink>
-        <TnTSideNavMenuLink Icon="error" Href="/Buttons">
+        <TnTSideNavMenuLink Icon="MaterialIcon.Error" Href="/Buttons">
             Buttons
         </TnTSideNavMenuLink>
-        <TnTSideNavMenuLink Icon="warning" Href="/card">
+        <TnTSideNavMenuLink Icon="MaterialIcon.Warning" Href="/card">
             Card Some really long content that should be cut off or wrapped
         </TnTSideNavMenuLink>
         <TnTSideNavMenuGroup Title="Group 1" Icon="business">
-            <TnTSideNavMenuLink Icon="delete" Href="/datagrid">
+            <TnTSideNavMenuLink Icon="MaterialIcon.Delete" Href="/datagrid">
                 Data Grid
             </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="star" Href="/progress">
+            <TnTSideNavMenuLink Icon="MaterialIcon.Star" Href="/progress">
                 Progress
             </TnTSideNavMenuLink>
         </TnTSideNavMenuGroup>
         <TnTSideNavMenuGroup Title="Group 1" Icon="business" Disabled="true">
-            <TnTSideNavMenuLink Icon="delete" Href="/datagrid">
+            <TnTSideNavMenuLink Icon="MaterialIcon.AccountBalance" Href="/datagrid">
                 Data Grid
             </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="star" Href="/progress">
+            <TnTSideNavMenuLink Icon="MaterialIcon.Backup" Href="/progress">
                 Progress
             </TnTSideNavMenuLink>
         </TnTSideNavMenuGroup>
         <TnTDivider />
-        <TnTSideNavHeadline>
-            My First Headline
-        </TnTSideNavHeadline>
+        <h3>
+            My Second Headline
+        </h3>
         <TnTSideNavMenuGroup Title="Group 2" Icon="done" Expand="true">
-            <TnTSideNavMenuLink Icon="logout" Href="/forms">
+            <TnTSideNavMenuLink Icon="MaterialIcon.Publish" Href="/forms">
                 Forms
             </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="favorite" Href="/upload">
+            <TnTSideNavMenuLink Icon="MaterialIcon.PanoramaHorizontal" Href="/upload">
                 Upload
             </TnTSideNavMenuLink>
-            <TnTSideNavMenuLink Icon="cancel" Href="/tabview">
+            <TnTSideNavMenuLink Icon="MaterialIcon.Poll" Href="/tabview">
                 Tabs
             </TnTSideNavMenuLink>
             <TnTSideNavMenuGroup Title="Group 2" Icon="done" Expand="true">
-                <TnTSideNavMenuLink Icon="logout" Href="/forms">
+                <TnTSideNavMenuLink Icon="MaterialIcon.Http" Href="/forms">
                     Forms
                 </TnTSideNavMenuLink>
-                <TnTSideNavMenuLink Icon="favorite" Href="/upload">
+                <TnTSideNavMenuLink Icon="MaterialIcon.Edit" Href="/upload">
                     Upload
                 </TnTSideNavMenuLink>
-                <TnTSideNavMenuLink Icon="cancel" Href="/tabview">
+                <TnTSideNavMenuLink Icon="MaterialIcon.ArrowDropDownCircle" Href="/tabview">
                     Tabs
                 </TnTSideNavMenuLink>
             </TnTSideNavMenuGroup>
