--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -11,6 +11,7 @@
 @import 'TnTComponents/_buttons.scss';
 @import 'TnTComponents/_div.scss';
 @import 'TnTComponents/_input.scss';
+@import 'TnTComponents/_anchor.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
