--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -24,6 +24,36 @@
         z-index: 999;
         padding: 0.5rem;
         box-sizing: border-box;
+
+        div.tnt-components {
+            padding: 0;
+            cursor: pointer;
+            overflow: hidden;
+            display: flex;
+
+            a {
+                display: inline-flex;
+                width: 100%;
+                height: 100%;
+                cursor: inherit;
+                min-height: 3rem;
+                max-height: 5rem;
+                text-overflow: ellipsis;
+                flex-wrap: nowrap;
+                box-sizing: border-box;
+                align-items: center;
+
+                span.tnt-icon {
+                    padding: 0 0.5rem;
+                }
+            }
+
+            &.tnt-disabled {
+                opacity: 0.3;
+                pointer-events: none;
+                cursor: not-allowed;
+            }
+        }
     }
 
     tnt-header, tnt-footer {
