Added side nav menu

--- a/LiveTest/LiveTest/Components/Layout/MainLayout.razor
+++ b/LiveTest/LiveTest/Components/Layout/MainLayout.razor
@@ -21,7 +21,7 @@
         <TnTSideNavMenuLink Icon="MaterialIcon.Warning" Href="/card">
             Card Some really long content that should be cut off or wrapped
         </TnTSideNavMenuLink>
-        <TnTSideNavMenuGroup Title="Group 1" Icon="business">
+        <TnTSideNavMenuGroup Title="Group 1" Icon="MaterialIcon.Business">
             <TnTSideNavMenuLink Icon="MaterialIcon.Delete" Href="/datagrid">
                 Data Grid
             </TnTSideNavMenuLink>
@@ -29,7 +29,7 @@
                 Progress
             </TnTSideNavMenuLink>
         </TnTSideNavMenuGroup>
-        <TnTSideNavMenuGroup Title="Group 1" Icon="business" Disabled="true">
+        <TnTSideNavMenuGroup Title="Group 1" Icon="MaterialIcon.Cached" Disabled="true">
             <TnTSideNavMenuLink Icon="MaterialIcon.AccountBalance" Href="/datagrid">
                 Data Grid
             </TnTSideNavMenuLink>
@@ -41,7 +41,7 @@
         <h3>
             My Second Headline
         </h3>
-        <TnTSideNavMenuGroup Title="Group 2" Icon="done" Expand="true">
+        <TnTSideNavMenuGroup Title="Group 2" Icon="MaterialIcon.Dock" Expand="true">
             <TnTSideNavMenuLink Icon="MaterialIcon.Publish" Href="/forms">
                 Forms
             </TnTSideNavMenuLink>
@@ -51,7 +51,7 @@
             <TnTSideNavMenuLink Icon="MaterialIcon.Poll" Href="/tabview">
                 Tabs
             </TnTSideNavMenuLink>
-            <TnTSideNavMenuGroup Title="Group 2" Icon="done" Expand="true">
+            <TnTSideNavMenuGroup Title="Group 2" Icon="MaterialIcon.Face" Expand="true">
                 <TnTSideNavMenuLink Icon="MaterialIcon.Http" Href="/forms">
                     Forms
                 </TnTSideNavMenuLink>
