--- a/TnTComponents/Styles/style.scss
+++ b/TnTComponents/Styles/style.scss
@@ -12,6 +12,7 @@
 @import 'TnTComponents/_div.scss';
 @import 'TnTComponents/_input.scss';
 @import 'TnTComponents/_anchor.scss';
+@import 'TnTComponents/_progress.scss';
 
 .tnt-components {
     font-family: 'Roboto', sans-serif;
