Updated card and side nav styling

--- a/LiveTest/LiveTest.Client/Components/CardTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/CardTesting.razor
@@ -20,7 +20,7 @@
     </div>
 </TnTComponents.TnTCard>
 
-<TnTComponents.TnTCard Direction="LayoutDirection.Vertical" Appearance="CardAppearance.Outlined">
+<TnTComponents.TnTCard Direction="LayoutDirection.Vertical" MakeOutlined="true" Elevation="0">
     <div>
         Some Content
     </div>
