--- a/LiveTest/LiveTest.Client/Components/CardTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/CardTesting.razor
@@ -20,6 +20,8 @@
     </div>
 </TnTComponents.TnTCard>
 
+<TnTDivider />
+
 <TnTComponents.TnTCard Direction="LayoutDirection.Vertical" MakeOutlined="true" Elevation="0">
     <div>
         Some Content
