Fixed card styling

--- a/LiveTest/LiveTest.Client/Components/CardTesting.razor
+++ b/LiveTest/LiveTest.Client/Components/CardTesting.razor
@@ -1,25 +1,31 @@
 ﻿@using TnTComponents
-<TnTComponents.TnTCard Direction="LayoutDirection.Vertical">
-    <div>
-        Some Content
-    </div>
-    <div>
-        Some Content
-    </div><div>
-        Some Content
-    </div><div>
-        Some Content
-    </div><div>
-        Some Content
-    </div><div>
-        Some Content
-    </div><div>
-        Some Content
-    </div><div>
-        Some Content
-    </div>
-</TnTComponents.TnTCard>
+<TnTRow>
+    <TnTColumn L="3" M="6" S="12">
+        <TnTContainer>
+            <TnTComponents.TnTCard Direction="LayoutDirection.Vertical">
+                <div>
+                    Some Content
+                </div>
+                <div>
+                    Some Content
+                </div><div>
+                    Some Content
+                </div><div>
+                    Some Content
+                </div><div>
+                    Some Content
+                </div><div>
+                    Some Content
+                </div><div>
+                    Some Content
+                </div><div>
+                    Some Content
+                </div>
+            </TnTComponents.TnTCard>
+        </TnTContainer>
+    </TnTColumn>
 
+</TnTRow>
 <TnTDivider />
 
 <TnTComponents.TnTCard Direction="LayoutDirection.Vertical" MakeOutlined="true" Elevation="0">
