--- a/TnTComponents/Styles/TnTComponents/_measurements.scss
+++ b/TnTComponents/Styles/TnTComponents/_measurements.scss
@@ -50,7 +50,26 @@ $element-bottom-margin: ($gutter-width*2)/3 !default;
 }
 
 .tnt-container {
-    padding: 8px;
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
+}
+
+@media #{$medium-and-up} {
+    .tnt-container {
+        width: 85%;
+    }
+}
+
+@media #{$large-and-up} {
+    .tnt-container {
+        width: 70%;
+    }
+}
+
+.tnt-col .tnt-row {
+    margin-left: (-1 * $gutter-width / 2);
+    margin-right: (-1 * $gutter-width / 2);
 }
 
 .tnt-row {
@@ -167,5 +186,15 @@ $element-bottom-margin: ($gutter-width*2)/3 !default;
                 $i: $i + 1;
             }
         }
+    }
+}
+
+@for $i from 1 through 16{
+    .tnt-padding-#{$i} {
+        padding: #{(0.25 * $i)}rem;
+    }
+
+    .tnt-margin-#{$i} {
+        margin: #{(0.25 * $i)}rem;
     }
 }
