--- a/TnTComponents/Styles/TnTComponents/_layout.scss
+++ b/TnTComponents/Styles/TnTComponents/_layout.scss
@@ -30,6 +30,8 @@
             user-select: none;
             cursor: pointer;
             overflow: hidden;
+            display: block;
+            width:100%;
 
             & > span {
                 display: inline-flex;
@@ -37,6 +39,8 @@
                 align-content: center;
                 align-items: center;
                 width: 100%;
+
+                @extend .tnt-actionable-bg-color-transparent;
             }
 
             & > span > span:last-child.tnt-icon {
